--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   vite:
-    build:
-      context: .
-      target: build
+    build: .
     ports:
       - "5001:5001"
+    env_file:
+      - .env
